# metric-query-rs

./: .gitignore  .readthedocs.yaml  Cargo.toml  README.md  deploy-dev.sh  deploy.ps1  deploy.sh  docker-compose.yml  pyproject.toml
api/: Dockerfile  README.md  app.py  generate_test_data.py  metric_query_simplified.py  minimal_test.py  requirements.txt  test_data.json  test_harness.py  test_label_filters.py  test_metric_library.py  test_output.txt
api/config/: __init__.py  swagger.py
api/docs/: README.md  integrated-label-handling.md  labeled-metrics-endpoints.md  labeled-metrics-pipeline.md
api/metric_query_library/: __init__.py  __init__.py.fixed  label_ops.py  transformations.py  type_defs.py  validation.py
api/models/: __init__.py  store.py
api/routes/: __init__.py  docs.py  extensions.py  labeled_metrics.py  metrics.py  tests.py
api/tests/: test_metrics.py
api/utils/: __init__.py  utils.py
docs/: conf.py  installation.rst  requirements.txt  usage.rst
docs/_build/html/: .buildinfo  api.html  genindex.html  index.html  installation.html  introduction.html  objects.inv  (+3 more)
k8s/: api-deployment.yaml  ingress.yaml  ui-deployment.yaml
metrics-chart/: .helmignore  Chart.yaml  README.md  values-dev.yaml  values-prod.yaml  values.yaml
metrics-chart/templates/: NOTES.txt  api-deployment.yaml  ingress.yaml  namespace.yaml  test-data-configmap.yaml  ui-deployment.yaml
src/: errors.rs  lib.rs  plugin_impls.rs  plugins.rs  tests.rs  transformations.rs
src/models/: metric.rs  mod.rs
ui/: Dockerfile  next.config.ts  package-lock.json  package.json
(+16 files in other folders)
