[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "metric_query_library"
version = "0.1.0"
description = "A library for querying and transforming metrics"
requires-python = ">=3.8"
dependencies = ["flask>=3.1.0"]

[tool.maturin]
python-source = "api"
